@@ -43,7 +43,7 @@ const char *gengetopt_args_info_help[] = {
   "      --statip=STRING           Static IP address pool",
   "      --dns1=STRING             Primary DNS server IP address",
   "      --dns2=STRING             Secondary DNS server IP address",
-  "      --domain=STRING           Domain to use for DNS lookups  \n                                  (default=`picopoint.com')",
+  "      --domain=STRING           Domain to use for DNS lookups  \n                                  (default=`coova.org')",
   "      --ipup=STRING             Script to run after link-up",
   "      --ipdown=STRING           Script to run after link-down",
   "      --conup=STRING            Script to run after user logon",
@@ -78,10 +78,11 @@ const char *gengetopt_args_info_help[] = {
   "      --uamanydns               Allow client to use any DNS server  \n                                  (default=off)",
   "      --nouamsuccess            Do not return to the UAM server on success, \n                                  original url instead  (default=off)",
   "      --nouamwispr              Do not send WISPr XML from ChilliSpot, assume \n                                  back-end does  (default=off)",
+  "      --uamlogoutip=STRING      HTTP Auto-Logout IP Address  \n                                  (default=`1.1.1.1')",
   "      --macauth                 Authenticate based on MAC address  \n                                  (default=off)",
   "      --macallowed=STRING       List of allowed MAC addresses",
   "      --macsuffix=STRING        Suffix to add to the MAC address",
-  "      --macpasswd=STRING        Password used when performing MAC \n                                  authentication  (default=`password')",
+  "      --macpasswd=STRING        Password used when performing MAC \n                                  authentication",
   "      --wwwdir=STRING           Local content served by chilli (for splash \n                                  page, etc)",
   "      --adminuser=STRING        RADIUS administrative user login username",
   "      --adminpasswd=STRING      RADIUS administrative user login password",
@@ -198,6 +199,7 @@ void clear_given (struct gengetopt_args_info *args_info)
   args_info->uamanydns_given = 0 ;
   args_info->nouamsuccess_given = 0 ;
   args_info->nouamwispr_given = 0 ;
+  args_info->uamlogoutip_given = 0 ;
   args_info->macauth_given = 0 ;
   args_info->macallowed_given = 0 ;
   args_info->macsuffix_given = 0 ;
@@ -248,7 +250,7 @@ void clear_args (struct gengetopt_args_info *args_info)
   args_info->dns1_orig = NULL;
   args_info->dns2_arg = NULL;
   args_info->dns2_orig = NULL;
-  args_info->domain_arg = gengetopt_strdup ("picopoint.com");
+  args_info->domain_arg = gengetopt_strdup ("coova.org");
   args_info->domain_orig = NULL;
   args_info->ipup_arg = NULL;
   args_info->ipup_orig = NULL;
@@ -313,12 +315,14 @@ void clear_args (struct gengetopt_args_info *args_info)
   args_info->uamanydns_flag = 0;
   args_info->nouamsuccess_flag = 0;
   args_info->nouamwispr_flag = 0;
+  args_info->uamlogoutip_arg = gengetopt_strdup ("1.1.1.1");
+  args_info->uamlogoutip_orig = NULL;
   args_info->macauth_flag = 0;
   args_info->macallowed_arg = NULL;
   args_info->macallowed_orig = NULL;
   args_info->macsuffix_arg = NULL;
   args_info->macsuffix_orig = NULL;
-  args_info->macpasswd_arg = gengetopt_strdup ("password");
+  args_info->macpasswd_arg = NULL;
   args_info->macpasswd_orig = NULL;
   args_info->wwwdir_arg = NULL;
   args_info->wwwdir_orig = NULL;
@@ -402,25 +406,26 @@ void init_args_info(struct gengetopt_args_info *args_info)
   args_info->uamanydns_help = gengetopt_args_info_help[49] ;
   args_info->nouamsuccess_help = gengetopt_args_info_help[50] ;
   args_info->nouamwispr_help = gengetopt_args_info_help[51] ;
-  args_info->macauth_help = gengetopt_args_info_help[52] ;
-  args_info->macallowed_help = gengetopt_args_info_help[53] ;
+  args_info->uamlogoutip_help = gengetopt_args_info_help[52] ;
+  args_info->macauth_help = gengetopt_args_info_help[53] ;
+  args_info->macallowed_help = gengetopt_args_info_help[54] ;
   args_info->macallowed_min = -1;
   args_info->macallowed_max = -1;
-  args_info->macsuffix_help = gengetopt_args_info_help[54] ;
-  args_info->macpasswd_help = gengetopt_args_info_help[55] ;
-  args_info->wwwdir_help = gengetopt_args_info_help[56] ;
-  args_info->adminuser_help = gengetopt_args_info_help[57] ;
-  args_info->adminpasswd_help = gengetopt_args_info_help[58] ;
-  args_info->nasmac_help = gengetopt_args_info_help[59] ;
-  args_info->nasip_help = gengetopt_args_info_help[60] ;
-  args_info->ssid_help = gengetopt_args_info_help[61] ;
-  args_info->vlan_help = gengetopt_args_info_help[62] ;
-  args_info->cmdsocket_help = gengetopt_args_info_help[63] ;
-  args_info->swapoctets_help = gengetopt_args_info_help[64] ;
-  args_info->usestatusfile_help = gengetopt_args_info_help[65] ;
-  args_info->localusers_help = gengetopt_args_info_help[66] ;
-  args_info->wpaguests_help = gengetopt_args_info_help[67] ;
-  args_info->chillixml_help = gengetopt_args_info_help[68] ;
+  args_info->macsuffix_help = gengetopt_args_info_help[55] ;
+  args_info->macpasswd_help = gengetopt_args_info_help[56] ;
+  args_info->wwwdir_help = gengetopt_args_info_help[57] ;
+  args_info->adminuser_help = gengetopt_args_info_help[58] ;
+  args_info->adminpasswd_help = gengetopt_args_info_help[59] ;
+  args_info->nasmac_help = gengetopt_args_info_help[60] ;
+  args_info->nasip_help = gengetopt_args_info_help[61] ;
+  args_info->ssid_help = gengetopt_args_info_help[62] ;
+  args_info->vlan_help = gengetopt_args_info_help[63] ;
+  args_info->cmdsocket_help = gengetopt_args_info_help[64] ;
+  args_info->swapoctets_help = gengetopt_args_info_help[65] ;
+  args_info->usestatusfile_help = gengetopt_args_info_help[66] ;
+  args_info->localusers_help = gengetopt_args_info_help[67] ;
+  args_info->wpaguests_help = gengetopt_args_info_help[68] ;
+  args_info->chillixml_help = gengetopt_args_info_help[69] ;
   
 }
 
@@ -833,6 +838,16 @@ cmdline_parser_release (struct gengetopt_args_info *args_info)
       args_info->uamallowed_arg = 0;
       free (args_info->uamallowed_orig); /* free previous argument */
       args_info->uamallowed_orig = 0;
+    }
+  if (args_info->uamlogoutip_arg)
+    {
+      free (args_info->uamlogoutip_arg); /* free previous argument */
+      args_info->uamlogoutip_arg = 0;
+    }
+  if (args_info->uamlogoutip_orig)
+    {
+      free (args_info->uamlogoutip_orig); /* free previous argument */
+      args_info->uamlogoutip_orig = 0;
     }
   if (args_info->macallowed_arg)
     {
@@ -1315,6 +1330,13 @@ cmdline_parser_file_save(const char *filename, struct gengetopt_args_info *args_
   if (args_info->nouamwispr_given) {
     fprintf(outfile, "%s\n", "nouamwispr");
   }
+  if (args_info->uamlogoutip_given) {
+    if (args_info->uamlogoutip_orig) {
+      fprintf(outfile, "%s=\"%s\"\n", "uamlogoutip", args_info->uamlogoutip_orig);
+    } else {
+      fprintf(outfile, "%s\n", "uamlogoutip");
+    }
+  }
   if (args_info->macauth_given) {
     fprintf(outfile, "%s\n", "macauth");
   }
@@ -1718,6 +1740,7 @@ cmdline_parser_internal (int argc, char * const *argv, struct gengetopt_args_inf
         { "uamanydns",	0, NULL, 0 },
         { "nouamsuccess",	0, NULL, 0 },
         { "nouamwispr",	0, NULL, 0 },
+        { "uamlogoutip",	1, NULL, 0 },
         { "macauth",	0, NULL, 0 },
         { "macallowed",	1, NULL, 0 },
         { "macsuffix",	1, NULL, 0 },
@@ -2701,6 +2724,25 @@ cmdline_parser_internal (int argc, char * const *argv, struct gengetopt_args_inf
             local_args_info.nouamwispr_given = 1;
             args_info->nouamwispr_given = 1;
             args_info->nouamwispr_flag = !(args_info->nouamwispr_flag);
+          }
+          /* HTTP Auto-Logout IP Address.  */
+          else if (strcmp (long_options[option_index].name, "uamlogoutip") == 0)
+          {
+            if (local_args_info.uamlogoutip_given)
+              {
+                fprintf (stderr, "%s: `--uamlogoutip' option given more than once%s\n", argv[0], (additional_error ? additional_error : ""));
+                goto failure;
+              }
+            if (args_info->uamlogoutip_given && ! override)
+              continue;
+            local_args_info.uamlogoutip_given = 1;
+            args_info->uamlogoutip_given = 1;
+            if (args_info->uamlogoutip_arg)
+              free (args_info->uamlogoutip_arg); /* free previous string */
+            args_info->uamlogoutip_arg = gengetopt_strdup (optarg);
+            if (args_info->uamlogoutip_orig)
+              free (args_info->uamlogoutip_orig); /* free previous string */
+            args_info->uamlogoutip_orig = gengetopt_strdup (optarg);
           }
           /* Authenticate based on MAC address.  */
           else if (strcmp (long_options[option_index].name, "macauth") == 0)
